[project]
name = "hermes"
version = "2.1.0"
description = "A simple no nonsense build system for C/C++"
authors = [
    {name = "StealthyPanda",email = "shaikm259@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer (>=0.24.1,<0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hermes = "hermes:main"
